--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_bloc: ^8.0.0
   http: ^0.13.3
   webfeed: ^0.7.0
+  flutter_markdown: ^0.6.10
 
 
   # The following adds the Cupertino Icons font to your application.
