--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,13 @@ dependencies:
   http: ^0.13.3
   webfeed: ^0.7.0
   flutter_markdown: ^0.6.10
+  xml: ^5.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
