--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   webfeed: ^0.7.0
   flutter_markdown: ^0.6.10
   xml: ^5.0.2
+  html: ^0.15.4
 
 
   # The following adds the Cupertino Icons font to your application.
